--- a/fighting.html
+++ b/fighting.html
@@ -102,6 +102,10 @@
 <td>December 19, 2025 17:00 PM</td>
 <td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 19, 2025 17:00:00"></span></td>
 </tr>
+<td><a href="https://roxiestreams.live/ppv-streams-1">Jake Paul vs. Anthony Joshua</a></td>
+<td>December 19, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 19, 2025 17:00:00"></span></td>
+</tr>
 </tbody>
 </table>
 </div>
