--- a/nba.html
+++ b/nba.html
@@ -310,6 +310,96 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for December 19, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Miami Heat vs Boston Celtics
+        </a>
+       </td>
+       <td>
+        December 19, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 20, 2025 4:00 PM:00" data-start="December 19, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Philadelphia 76ers vs New York Knicks
+        </a>
+       </td>
+       <td>
+        December 19, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 20, 2025 4:00 PM:00" data-start="December 19, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         San Antonio Spurs vs Atlanta Hawks
+        </a>
+       </td>
+       <td>
+        December 19, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 20, 2025 4:30 PM:00" data-start="December 19, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Chicago Bulls vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        December 19, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 20, 2025 4:30 PM:00" data-start="December 19, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Oklahoma City Thunder vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        December 19, 2025 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 20, 2025 6:30 PM:00" data-start="December 19, 2025 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
