--- a/nhl.html
+++ b/nhl.html
@@ -144,6 +144,34 @@
             <td><a href="https://roxiestreams.live/nhl-streams-10">Dallas Stars vs San Jose Sharks</a></td>
             <td>December 18, 2025 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2025-12-19 19:00:00" data-start="2025-12-18 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Friday, December 19, 2025</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Carolina Hurricanes vs Florida Panthers</a></td>
+            <td>December 19, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-20 16:00:00" data-start="2025-12-19 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Vancouver Canucks vs New York Islanders</a></td>
+            <td>December 19, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-20 16:00:00" data-start="2025-12-19 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Winnipeg Jets vs Colorado Avalanche</a></td>
+            <td>December 19, 2025 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-20 18:00:00" data-start="2025-12-19 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">New Jersey Devils vs Utah Mammoth</a></td>
+            <td>December 19, 2025 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-20 18:00:00" data-start="2025-12-19 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Dallas Stars vs Anaheim Ducks</a></td>
+            <td>December 19, 2025 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-20 19:00:00" data-start="2025-12-19 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
