--- a/soccer.html
+++ b/soccer.html
@@ -96,19 +96,19 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Napoli vs Milan</a>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Bologna vs Inter Milan</a>
 <td>December 18, 2025 11:00 AM</td>
 <td><span class="countdown-timer" data-end="December 19, 2025 10:00:00" data-start="December 18, 2025 11:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Crystal Palace vs KuPS</a>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Dortmund vs Borussia M'gladbach</a>
 <td>December 18, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 19, 2025 11:00:00" data-start="December 18, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Strasbourg vs Breidablik</a>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Lens vs Feignies</a>
 <td>December 18, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 19, 2025 11:00:00" data-start="December 18, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Real Murcia vs Real Betis</a>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Valencia vs Mallorca</a>
 <td>December 18, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 19, 2025 11:00:00" data-start="December 18, 2025 12:00:00"></span></td>
 <tr>
