--- a/soccer.html
+++ b/soccer.html
@@ -97,30 +97,21 @@
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Bologna vs Inter Milan</a>
-<td>December 18, 2025 11:00 AM</td>
-<td><span class="countdown-timer" data-end="December 19, 2025 10:00:00" data-start="December 18, 2025 11:00:00"></span></td>
+<td>December 19, 2025 11:00 AM</td>
+<td><span class="countdown-timer" data-end="December 20, 2025 10:00:00" data-start="December 19, 2025 11:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Dortmund vs Borussia M'gladbach</a>
-<td>December 18, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 19, 2025 11:00:00" data-start="December 18, 2025 12:00:00"></span></td>
+<td>December 19, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Lens vs Feignies</a>
-<td>December 18, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 19, 2025 11:00:00" data-start="December 18, 2025 12:00:00"></span></td>
+<td>December 19, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Valencia vs Mallorca</a>
-<td>December 18, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 19, 2025 11:00:00" data-start="December 18, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Rayo Vallecano vs Drita</a>
-<td>December 18, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 19, 2025 11:00:00" data-start="December 18, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Mainz 05 vs Samsunspor</a>
-<td>December 18, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 19, 2025 11:00:00" data-start="December 18, 2025 12:00:00"></span></td>
-<tr>
-</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
+<td>December 19, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<tr></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
