--- a/nfl.html
+++ b/nfl.html
@@ -142,15 +142,29 @@
      <tbody>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/nfl-streams-1">
-         Los Angeles Rams vs Seattle Seahawks
+        <a href="https://roxiestreams.live/ncaa-streams-1">
+         Memphis vs NC State
         </a>
        </td>
        <td>
-        December 17, 2025 2:00 PM
+        December 18, 2025 11:30 AM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 18, 2025 5:15 PM:00" data-start="December 17, 2025 2:00 PM:00">
+        <span class="countdown-timer" data-end="December 19, 2025 5:15 PM:00" data-start="December 18, 2025 11:30 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/ncaa-streams-2">
+         Alabama vs Oklahoma
+        </a>
+       </td>
+       <td>
+        December 18, 2025 17:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 19, 2025 5:15 PM:00" data-start="December 18, 2025 5:00 PM:00">
         </span>
        </td>
       </tr>
