--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <tr>
                     <td><a href="https://roxiestreams.live/nba">NCAA (College Football)</a></td>
                     <td>December 19, 2025 11:30 AM</td>
-                    <td><span class="countdown-timer" data-start="December 19, 2025 16:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><span class="countdown-timer" data-start="December 19, 2025 11:30:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
                     <td><a href="https://roxiestreams.live/soccer">Laliga</a></td>
@@ -198,7 +198,7 @@
                     <td><span class="countdown-timer" data-start="December 19, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl-streams-1">Jake Paul vs Anthony Joshua</a></td>
+                    <td><a href="https://roxiestreams.live/ppv-streams-1">Jake Paul vs Anthony Joshua</a></td>
                     <td>December 19, 2025 13:45 PM</td>
                     <td><span class="countdown-timer" data-start="December 19, 2025 13:45:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
