--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <td><span class="countdown-timer" data-start="December 19, 2025 11:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nba">NCAA (College Football)</a></td>
+                    <td><a href="https://roxiestreams.live/nfl">NCAA (College Football)</a></td>
                     <td>December 19, 2025 11:30 AM</td>
                     <td><span class="countdown-timer" data-start="December 19, 2025 11:30:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
