--- a/soccer.html
+++ b/soccer.html
@@ -97,92 +97,92 @@
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Newcastle United vs Chelsea</a>
-<td>December 19, 2025 11:00 AM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 10:00:00" data-start="December 19, 2025 11:00:00"></span></td>
+<td>December 20, 2025 04:30 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 03:30:00" data-start="December 20, 2025 04:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Southampton vs Coventry</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td>December 20, 2025 04:30 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 03:30:00" data-start="December 20, 2025 04:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Preston North End vs Norwich City</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td>December 20, 2025 04:30 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 03:30:00" data-start="December 20, 2025 04:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Real Oviedo vs Celta Vigo</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td>December 20, 2025 05:00 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 04:00:00" data-start="December 20, 2025 05:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-5">St Maur Lusitanos vs Lille</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td>December 20, 2025 06:30 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 05:30:00" data-start="December 20, 2025 06:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-6">Bournemouth vs Burnley</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td>December 20, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 06:00:00" data-start="December 20, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-7">Brighton vs Sunderland</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td>December 20, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 06:00:00" data-start="December 20, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Manchester City vs West Ham</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td>December 20, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 06:00:00" data-start="December 20, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-8">Wolves vs Brentford</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td>December 20, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 06:00:00" data-start="December 20, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Queens Park Rangers vs Leicester City</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td>December 20, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 06:00:00" data-start="December 20, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Bristol City vs Middlesbrough</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td>December 20, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 06:00:00" data-start="December 20, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Levante vs Real Sociedad</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td>December 20, 2025 07:15 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 06:15:00" data-start="December 20, 2025 07:15:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Lazio vs Cremonese</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">RB Leipzig vs Bayer Leverkusen</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Tottenham Hotspur vs Liverpool</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Osasuna vs Deportivo Alaves</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td>December 20, 2025 08:00 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 07:00:00" data-start="December 20, 2025 08:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-5">Lyon Duchère vs Toulouse</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td>December 20, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 08:00:00" data-start="December 20, 2025 09:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">RB Leipzig vs Bayer Leverkusen</a>
+<td>December 20, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 08:30:00" data-start="December 20, 2025 09:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Tottenham Hotspur vs Liverpool</a>
+<td>December 20, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 08:30:00" data-start="December 20, 2025 09:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Osasuna vs Deportivo Alaves</a>
+<td>December 20, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 08:30:00" data-start="December 20, 2025 09:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-11">Juventus vs Roma</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td>December 20, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 10:45:00" data-start="December 20, 2025 11:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-5">Fontenay Vendée Foot vs PSG</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td>December 20, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 11:00:00" data-start="December 20, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Real Madrid vs Sevilla</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td>December 20, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 11:00:00" data-start="December 20, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Fontenay Vendée Foot vs PSG</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Leeds United vs Crystal Palace</a>
+<td>December 20, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 11:00:00" data-start="December 20, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Fontenay Vendée Foot vs PSG</a>
-<td>December 19, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 20, 2025 11:00:00" data-start="December 19, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Everton vs Arsenal</a>
+<td>December 20, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 11:00:00" data-start="December 20, 2025 12:00:00"></span></td>
 <tr>
 </tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
