--- a/nfl.html
+++ b/nfl.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
+
 <html data-bs-theme="dark" lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <title>
-   Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV
-  </title>
-  <meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
-  <meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
-  <link href="https://fonts.googleapis.com" rel="preconnect"/>
-  <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-  <link href="css/main.css" rel="stylesheet" type="text/css"/>
-  <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
-  <style>
-   <script>
+<head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
+<meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
+<meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+<link href="css/main.css" rel="stylesheet" type="text/css"/>
+<link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
+<style>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -62,130 +61,71 @@
         h2 {
             color: pink;
         }
-  </style>
- </head>
- <body>
-  <nav class="navbar navbar-expand-lg bg-black">
-   <div class="container-fluid">
-    <a class="navbar-brand" href="https://roxiestreams.live/">
-     RoxieStreams
-    </a>
-    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
-     <span class="navbar-toggler-icon">
-     </span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/soccer">
-        Soccer
-       </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/mlb">
-        MLB
-       </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/nba">
-        NBA
-       </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/nfl">
-        NFL
-       </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/nhl">
-        NHL
-       </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/fighting">
-        Fighting
-       </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/motorsports">
-        Motorsports
-       </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://discord.gg/JhkVmejRmn">
-        Stream Request (Discord)
-       </a>
-      </li>
-     </ul>
-    </div>
-   </div>
-  </nav>
-  <div class="container container-fluid pt-2 text-white">
-   <div class="mt-5">
-    <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming NCAA Events
-    </h2>
-    <table id="eventsTable">
-     <thead>
-      <tr>
-       <th>
-        Event
-       </th>
-       <th>
-        Start Time
-       </th>
-       <th>
-        Countdown
-       </th>
-      </tr>
-     </thead>
-     <tbody>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/ncaa-streams-1">
-         Memphis vs NC State
-        </a>
-       </td>
-       <td>
-        December 19, 2025 11:30 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 20, 2025 5:15 PM:00" data-start="December 19, 2025 11:30 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/ncaa-streams-2">
-         Alabama vs Oklahoma
-        </a>
-       </td>
-       <td>
-        December 19, 2025 17:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 20, 2025 5:15 PM:00" data-start="December 19, 2025 5:00 PM:00">
-        </span>
-       </td>
-      </tr>
-     </tbody>
-    </table>
-    <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-     <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-      <li class="nav-item">
-       <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
-        Stream Request (Discord)
-       </a>
-      </li>
-     </ul>
-     <p class="mb-0 text-body-secondary text-center text-lg-start">
-      Roxiestreams © 2024
-     </p>
-    </footer>
-    <script src="js/bootstrap.bundle.min.js">
-    </script>
-    <script>
-     function startCountdown() {
+    </style>
+</head>
+<body>
+<nav class="navbar navbar-expand-lg bg-black">
+<div class="container-fluid">
+<a class="navbar-brand" href="https://roxiestreams.live/">RoxieStreams</a>
+<button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+<span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nhl">NHL</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
+<li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
+</ul>
+</div>
+</div></nav>
+<div class="container container-fluid pt-2 text-white">
+<div class="mt-5">
+<h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">Upcoming NCAA/NFL Events</h2>
+<table id="eventsTable">
+<thead>
+<tr>
+<th>Event</th>
+<th>Start Time</th>
+<th>Countdown</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="https://roxiestreams.live/nfl-streams-1">Philadelphia Eagles vs Washington Commanders</a>
+<td>December 20, 2025 14:00 PM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 04:00:00" data-start="December 20, 2025 05:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/nfl-streams-2">Green Bay Packers vs Chicago Bears</a>
+<td>December 20, 2025 17:20 PM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 05:30:00" data-start="December 20, 2025 06:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">Miami (FL) vs Texas A&M</a>
+<td>December 20, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 03:30:00" data-start="December 20, 2025 04:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-2">Tulane vs Ole Miss</a>
+<td>December 20, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 03:30:00" data-start="December 20, 2025 04:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-2">James Madison vs Oregon</a>
+<td>December 20, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="December 21, 2025 03:30:00" data-start="December 20, 2025 04:30:00"></span></td>
+<tr>
+</tbody></table></div>
+<footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+<ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+<li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
+</ul>
+<p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
+</footer>
+<script src="js/bootstrap.bundle.min.js"></script>
+<script>
+        function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -215,7 +155,5 @@
 
         window.onload = startCountdown;
     </script>
-   </div>
-  </div>
- </body>
+</div></body>
 </html>
