--- a/nfl.html
+++ b/nfl.html
@@ -98,25 +98,25 @@
 <tr>
 <td><a href="https://roxiestreams.live/nfl-streams-1">Philadelphia Eagles vs Washington Commanders</a>
 <td>December 20, 2025 14:00 PM</td>
-<td><span class="countdown-timer" data-end="December 21, 2025 04:00:00" data-start="December 20, 2025 05:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 21, 2025 13:00:00" data-start="December 20, 2025 14:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/nfl-streams-2">Green Bay Packers vs Chicago Bears</a>
 <td>December 20, 2025 17:20 PM</td>
-<td><span class="countdown-timer" data-end="December 21, 2025 05:30:00" data-start="December 20, 2025 06:30:00"></span></td>
+<td><span class="countdown-timer" data-end="December 21, 2025 16:20:00" data-start="December 20, 2025 17:20:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-1">Miami (FL) vs Texas A&M</a>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">Miami (FL) vs Texas A&amp;M</a>
 <td>December 20, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="December 21, 2025 03:30:00" data-start="December 20, 2025 04:30:00"></span></td>
+<td><span class="countdown-timer" data-end="December 21, 2025 08:00:00" data-start="December 20, 2025 09:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-2">Tulane vs Ole Miss</a>
 <td>December 20, 2025 12:30 PM</td>
-<td><span class="countdown-timer" data-end="December 21, 2025 03:30:00" data-start="December 20, 2025 04:30:00"></span></td>
+<td><span class="countdown-timer" data-end="December 21, 2025 11:30:00" data-start="December 20, 2025 12:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-2">James Madison vs Oregon</a>
 <td>December 20, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="December 21, 2025 03:30:00" data-start="December 20, 2025 04:30:00"></span></td>
+<td><span class="countdown-timer" data-end="December 21, 2025 15:30:00" data-start="December 20, 2025 16:30:00"></span></td>
 <tr>
-</tbody></table></div>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
