--- a/fighting.html
+++ b/fighting.html
@@ -98,13 +98,13 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/ppv-streams-1">Jake Paul vs. Anthony Joshua</a></td>
-<td>December 19, 2025 13:45 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 19, 2025 13:35:00"></span></td>
+<td><a href="https://roxiestreams.live/ppv-streams-1">PFL Africa 4</a></td>
+<td>December 20, 2025 08:00 AM</td>
+<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 20, 2025 08:00:00"></span></td>
 </tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
-<td>December 19, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 19, 2025 17:00:00"></span></td>
+<td><a href="https://roxiestreams.live/ppv-streams-2">Misfits Mania: Andrew Tate vs Chase Demoor</a></td>
+<td>December 19, 2025 10:10 AM</td>
+<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 19, 2025 10:10:00"></span></td>
 </tr>
 </tbody>
 </table>
