--- a/index.html
+++ b/index.html
@@ -183,30 +183,30 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/darts">World Darts Championship</a></td>
-                    <td>December 19, 2025 11:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 19, 2025 11:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer">Premier League</a></td>
+                    <td>December 20, 2025 04:30 AM</td>
+                    <td><span class="countdown-timer" data-start="December 20, 2025 04:30:00" data-end="December 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/soccer-streams-4">Laliga</a></td>
+                    <td>December 20, 2025 05:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 20, 2025 05:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
                     <td><a href="https://roxiestreams.live/nfl">NCAA (College Football)</a></td>
-                    <td>December 19, 2025 11:30 AM</td>
-                    <td><span class="countdown-timer" data-start="December 19, 2025 11:30:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td>December 20, 2025 09:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 20, 2025 09:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer">Laliga</a></td>
-                    <td>December 19, 2025 12:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 19, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/ppv-streams-2">Misfits Mania: Andrew Tate vs Chase Demoor</a></td>
+                    <td>December 20, 2025 10:10 AM</td>
+                    <td><span class="countdown-timer" data-start="December 20, 2025 10:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                </tr>
+                    <td><a href="https://roxiestreams.live/nfl">NFL (Weekend Games)</a></td>
+                    <td>December 20, 2025 14:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 20, 2025 14:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/ppv-streams-1">Jake Paul vs Anthony Joshua</a></td>
-                    <td>December 19, 2025 13:45 PM</td>
-                    <td><span class="countdown-timer" data-start="December 19, 2025 13:45:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
-                    <td>December 19, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 19, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
                 <tr>
             </tbody>
         </table>
