--- a/nfl-streams-1.html
+++ b/nfl-streams-1.html
@@ -99,10 +99,10 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.xn--1000-ugoxe8a5a7g4h.com/nfl.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.xn--1000-ugoa0hsb9a0hb.com/main.m3u8')">Stream 2</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.xn--1000-ugoa0hsb9a0hb.com/nflalty.m3u8')">Stream 3</button>
-          </div>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.alfirdaus.eu.org/nfl.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.alfirdaus.eu.org/nflalt.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.alfirdaus.eu.org/nflalty.m3u8')">Stream 3</button>
+            </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
             </div>
@@ -136,7 +136,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://600.xn--1000-ugoxe8a5a7g4h.com/nfl.m3u8');
+            showPlayer('clappr', 'https://600.alfirdaus.eu.org/nfl.m3u8');
         };
     </script>
     <script>
