--- a/ppv-streams-3.html
+++ b/ppv-streams-3.html
@@ -99,8 +99,9 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.tanjung.eu.org/ppv3.m3u8')">Stream 1</button>
-          </div>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.alfirdaus.eu.org/ppv2.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.alfirdaus.eu.org/ataide.m3u8')">Stream 2</button>
+            </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
             </div>
@@ -134,7 +135,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://600.tanjung.eu.org/ppv3.m3u8');
+            showPlayer('clappr', 'https://600.alfirdaus.eu.org/ppv2.m3u8');
         };
     </script>
     <script>
