--- a/nfl-streams-1.html
+++ b/nfl-streams-1.html
@@ -101,7 +101,7 @@
             <div class="streamchanger">
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://600.alfirdaus.eu.org/nfl.m3u8')">Stream 1</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://600.alfirdaus.eu.org/nflalt.m3u8')">Stream 2</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.alfirdaus.eu.org/nflalty.m3u8')">Stream 3</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.alfirdaus.eu.org/nflalt.m3u8')">Stream 3</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
