--- a/nfl.html
+++ b/nfl.html
@@ -142,6 +142,21 @@
     <tbody>
      <tr>
       <td>
+       <a href="https://roxiestreams.live/redzone">
+        NFL RedZone
+       </a>
+      </td>
+      <td>
+       December 21, 2025 10:00 AM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+     <tr>
+      <td>
        <a href="https://roxiestreams.live/nfl-streams-1">
         Buffalo Bills vs Cleveland Browns
        </a>
