--- a/nfl.html
+++ b/nfl.html
@@ -172,7 +172,7 @@
      <tr>
       <td>
        <a href="https://roxiestreams.live/nfl-streams-2">
-        Los Angeles Rams vs Dallas Cowboys
+        Los Angeles Chargers vs Dallas Cowboys
        </a>
       </td>
       <td>
@@ -214,7 +214,7 @@
      <tr>
       <td>
        <a href="https://roxiestreams.live/nfl-streams-5">
-        New York vs New Orleans Saints
+        New York Jets vs New Orleans Saints
        </a>
       </td>
       <td>
@@ -228,7 +228,7 @@
      <tr>
       <td>
        <a href="https://roxiestreams.live/nfl-streams-6">
-        Minnesota Vikings vs New York
+        Minnesota Vikings vs New York Giants
        </a>
       </td>
       <td>
