--- a/MLBSCRIPT/nfl_with_streams.html
+++ b/MLBSCRIPT/nfl_with_streams.html
@@ -124,251 +124,224 @@
 <div class="container container-fluid pt-2 text-white">
 <div class="mt-5">
 <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming NFL Events
+     Upcoming NCAA/NFL Events
     </h2>
 <table id="eventsTable">
 <thead>
 <tr>
 <th>
-        Event
-       </th>
+       Event
+      </th>
 <th>
-        Start Time
-       </th>
+       Start Time
+      </th>
 <th>
-        Countdown
-       </th>
+       Countdown
+      </th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>
 <a href="https://roxiestreams.live/redzone">
-         NFL RedZone
-        </a>
+        NFL RedZone
+       </a>
 </td>
 <td>
-        December 14, 2025 10:00 AM
-       </td>
+       December 21, 2025 10:00 AM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
+<span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
-<td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122598">
-         Cleveland Browns vs Chicago Bears
-        </a>
-</td>
-<td>
-        December 14, 2025 10:00 AM
-       </td>
-<td>
-<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
-</span>
-</td>
-</tr>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122597">
-         Baltimore Ravens vs Cincinnati Bengals
-        </a>
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122595">
+        Buffalo Bills vs Cleveland Browns
+       </a>
 </td>
 <td>
-        December 14, 2025 10:00 AM
-       </td>
+       December 21, 2025 10:00 AM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
+<span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
 <a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122594">
-         Los Angeles Rams vs Kansas City Chiefs
-        </a>
+        Los Angeles Chargers vs Dallas Cowboys
+       </a>
 </td>
 <td>
-        December 14, 2025 10:00 AM
-       </td>
+       December 21, 2025 10:00 AM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
-</span>
-</td>
-</tr>
-<tr>
-<td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122593">
-         Buffalo Bills vs New England Patriots
-        </a>
-</td>
-<td>
-        December 14, 2025 10:00 AM
-       </td>
-<td>
-<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
-</span>
-</td>
-</tr>
-<tr>
-<td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122592">
-         Washington Commanders vs New York
-        </a>
-</td>
-<td>
-        December 14, 2025 10:00 AM
-       </td>
-<td>
-<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
-</span>
-</td>
-</tr>
-<tr>
-<td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122591">
-         Las Vegas Raiders vs Philadelphia Eagles
-        </a>
-</td>
-<td>
-        December 14, 2025 10:00 AM
-       </td>
-<td>
-<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
-</span>
-</td>
-</tr>
-<tr>
-<td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122595">
-         New York vs Jacksonville Jaguars
-        </a>
-</td>
-<td>
-        December 14, 2025 10:00 AM
-       </td>
-<td>
-<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
-</span>
-</td>
-</tr>
-<tr>
-<td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122596">
-         Arizona Cardinals vs Houston Texans
-        </a>
-</td>
-<td>
-        December 14, 2025 10:00 AM
-       </td>
-<td>
-<span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
+<span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
 <a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122590">
-         Green Bay Packers vs Denver Broncos
-        </a>
+        Kansas City Chiefs vs Tennessee Titans
+       </a>
 </td>
 <td>
-        December 14, 2025 1:25 PM
-       </td>
+       December 21, 2025 10:00 AM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
+<span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122589">
-         Detroit Lions vs Los Angeles Rams
-        </a>
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122593">
+        Cincinnati Bengals vs Miami Dolphins
+       </a>
 </td>
 <td>
-        December 14, 2025 1:25 PM
-       </td>
+       December 21, 2025 10:00 AM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
+<span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
+</span>
+</td>
+</tr>
+<tr>
+<td>
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122592">
+        New York Jets vs New Orleans Saints
+       </a>
+</td>
+<td>
+       December 21, 2025 10:00 AM
+      </td>
+<td>
+<span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
+</span>
+</td>
+</tr>
+<tr>
+<td>
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122591">
+        Minnesota Vikings vs New York Giants
+       </a>
+</td>
+<td>
+       December 21, 2025 10:00 AM
+      </td>
+<td>
+<span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
+</span>
+</td>
+</tr>
+<tr>
+<td>
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122596">
+        Tampa Bay Buccaneers vs Carolina Panthers
+       </a>
+</td>
+<td>
+       December 21, 2025 10:00 AM
+      </td>
+<td>
+<span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
 <a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122588">
-         Carolina Panthers vs New Orleans Saints
-        </a>
+        Jacksonville Jaguars vs Denver Broncos
+       </a>
 </td>
 <td>
-        December 14, 2025 1:25 PM
-       </td>
+       December 21, 2025 1:05 PM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
+<span class="countdown-timer" data-end="December 22, 2025 1:05 PM:00" data-start="December 21, 2025 1:05 PM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122586">
-         Tennessee Titans vs San Francisco 49ers
-        </a>
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122589">
+        Atlanta Falcons vs Arizona Cardinals
+       </a>
 </td>
 <td>
-        December 14, 2025 1:25 PM
-       </td>
+       December 21, 2025 1:05 PM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
+<span class="countdown-timer" data-end="December 22, 2025 1:05 PM:00" data-start="December 21, 2025 1:05 PM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
 <a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122587">
-         Indianapolis Colts vs Seattle Seahawks
-        </a>
+        Pittsburgh Steelers vs Detroit Lions
+       </a>
 </td>
 <td>
-        December 14, 2025 1:25 PM
-       </td>
+       December 21, 2025 1:25 PM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
+<span class="countdown-timer" data-end="December 22, 2025 1:25 PM:00" data-start="December 21, 2025 1:25 PM:00">
+</span>
+</td>
+</tr>
+<tr>
+<td>
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122586">
+        Las Vegas Raiders vs Houston Texans
+       </a>
+</td>
+<td>
+       December 21, 2025 1:25 PM
+      </td>
+<td>
+<span class="countdown-timer" data-end="December 22, 2025 1:25 PM:00" data-start="December 21, 2025 1:25 PM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
 <a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122585">
-         Minnesota Vikings vs Dallas Cowboys
-        </a>
+        New England Patriots vs Baltimore Ravens
+       </a>
 </td>
 <td>
-        December 14, 2025 5:20 PM
-       </td>
+       December 21, 2025 5:20 PM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 15, 2025 5:20 PM:00" data-start="December 14, 2025 5:20 PM:00">
+<span class="countdown-timer" data-end="December 22, 2025 5:20 PM:00" data-start="December 21, 2025 5:20 PM:00">
 </span>
 </td>
 </tr>
-</tbody>
+</tr></tbody>
 </table>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item">
 <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
-        Stream Request (Discord)
-       </a>
+       Stream Request (Discord)
+      </a>
 </li>
 </ul>
 <p class="mb-0 text-body-secondary text-center text-lg-start">
-      Roxiestreams © 2024
-     </p>
+     Roxiestreams © 2024
+    </p>
 </footer>
 <script src="js/bootstrap.bundle.min.js">
 </script>
 <script>
-     function startCountdown() {
+    function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -397,8 +370,7 @@
         }
 
         window.onload = startCountdown;
-    </script>
+   </script>
 </div>
-</div>
-</body>
+</div></body>
 </html>
