--- a/nfl-streams-2.html
+++ b/nfl-streams-2.html
@@ -99,8 +99,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.alfirdaus.eu.org/redzone.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.alfirdaus.eu.org/nfl2.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.xn--1000-ugoxe8a5a7g4h.com/nfl2.m3u8')">Stream 1</button>
           </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -135,7 +134,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.alfirdaus.eu.org/nfl2.m3u8');
+            showPlayer('clappr', 'https://daffodil.xn--1000-ugoxe8a5a7g4h.com/nfl2.m3u8');
         };
     </script>
     <script>
