--- a/nfl-streams-10.html
+++ b/nfl-streams-10.html
@@ -86,6 +86,7 @@
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nhl">NHL</a></li>
+
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
 <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
@@ -98,8 +99,8 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.tanjung.eu.org/nfl10.m3u8')">Stream 1</button>
-            </div>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.alfirdaus.eu.org/nfl10.m3u8')">Stream 1</button>
+          </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
             </div>
@@ -133,7 +134,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://600.tanjung.eu.org/nfl10.m3u8');
+            showPlayer('clappr', 'https://601.alfirdaus.eu.org/nfl10.m3u8');
         };
     </script>
     <script>
